// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render when user authenticated 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    authenticated="1234adsf"
    user={
        Object {
            "email": "someemail@mail.com",
            "id": "1234adsf",
            "name": "Jeff",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="app--title"
>
          New Idea
</h1>,
        <div
          className="sign--up-container"
/>,
        <div
          className="collapsible--menu"
>
          <input
                    id="menu"
                    type="checkbox"
          />
          <label
                    htmlFor="menu"
          />
          <div
                    className="menu-content"
          >
                    <ul>
                              <li>
                                        <a
                                                  href="#"
                                        />
                                        Notifications
                              </li>
                              <Link
                                        replace={false}
                                        to="profile"
                              >
                                        Profile
                              </Link>
                              <li>
                                        <a
                                                  href="#"
                                        />
                                        Top Tech Talks
                              </li>
                              <li>
                                        <a
                                                  href="#"
                                        />
                                        New Article
                              </li>
                              <li
                                        onClick={[Function]}
                              >
                                        <a
                                                  href="#"
                                        />
                                        Sign Out
                              </li>
                    </ul>
          </div>
</div>,
      ],
      "className": "header--container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "New Idea",
          "className": "app--title",
        },
        "ref": null,
        "rendered": "New Idea",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "sign--up-container",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              id="menu"
              type="checkbox"
/>,
            <label
              htmlFor="menu"
/>,
            <div
              className="menu-content"
>
              <ul>
                            <li>
                                          <a
                                                        href="#"
                                          />
                                          Notifications
                            </li>
                            <Link
                                          replace={false}
                                          to="profile"
                            >
                                          Profile
                            </Link>
                            <li>
                                          <a
                                                        href="#"
                                          />
                                          Top Tech Talks
                            </li>
                            <li>
                                          <a
                                                        href="#"
                                          />
                                          New Article
                            </li>
                            <li
                                          onClick={[Function]}
                            >
                                          <a
                                                        href="#"
                                          />
                                          Sign Out
                            </li>
              </ul>
</div>,
          ],
          "className": "collapsible--menu",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "id": "menu",
              "type": "checkbox",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "htmlFor": "menu",
            },
            "ref": null,
            "rendered": null,
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ul>
                <li>
                                <a
                                                href="#"
                                />
                                Notifications
                </li>
                <Link
                                replace={false}
                                to="profile"
                >
                                Profile
                </Link>
                <li>
                                <a
                                                href="#"
                                />
                                Top Tech Talks
                </li>
                <li>
                                <a
                                                href="#"
                                />
                                New Article
                </li>
                <li
                                onClick={[Function]}
                >
                                <a
                                                href="#"
                                />
                                Sign Out
                </li>
</ul>,
              "className": "menu-content",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li>
                    <a
                                        href="#"
                    />
                    Notifications
</li>,
                  <Link
                    replace={false}
                    to="profile"
>
                    Profile
</Link>,
                  <li>
                    <a
                                        href="#"
                    />
                    Top Tech Talks
</li>,
                  <li>
                    <a
                                        href="#"
                    />
                    New Article
</li>,
                  <li
                    onClick={[Function]}
>
                    <a
                                        href="#"
                    />
                    Sign Out
</li>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <a
                        href="#"
/>,
                      "Notifications",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "href": "#",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "a",
                    },
                    "Notifications",
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Profile",
                    "replace": false,
                    "to": "profile",
                  },
                  "ref": null,
                  "rendered": "Profile",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <a
                        href="#"
/>,
                      "Top Tech Talks",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "href": "#",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "a",
                    },
                    "Top Tech Talks",
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <a
                        href="#"
/>,
                      "New Article",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "href": "#",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "a",
                    },
                    "New Article",
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <a
                        href="#"
/>,
                      "Sign Out",
                    ],
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "href": "#",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "a",
                    },
                    "Sign Out",
                  ],
                  "type": "li",
                },
              ],
              "type": "ul",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="app--title"
>
            New Idea
</h1>,
          <div
            className="sign--up-container"
/>,
          <div
            className="collapsible--menu"
>
            <input
                        id="menu"
                        type="checkbox"
            />
            <label
                        htmlFor="menu"
            />
            <div
                        className="menu-content"
            >
                        <ul>
                                    <li>
                                                <a
                                                            href="#"
                                                />
                                                Notifications
                                    </li>
                                    <Link
                                                replace={false}
                                                to="profile"
                                    >
                                                Profile
                                    </Link>
                                    <li>
                                                <a
                                                            href="#"
                                                />
                                                Top Tech Talks
                                    </li>
                                    <li>
                                                <a
                                                            href="#"
                                                />
                                                New Article
                                    </li>
                                    <li
                                                onClick={[Function]}
                                    >
                                                <a
                                                            href="#"
                                                />
                                                Sign Out
                                    </li>
                        </ul>
            </div>
</div>,
        ],
        "className": "header--container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "New Idea",
            "className": "app--title",
          },
          "ref": null,
          "rendered": "New Idea",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "sign--up-container",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                id="menu"
                type="checkbox"
/>,
              <label
                htmlFor="menu"
/>,
              <div
                className="menu-content"
>
                <ul>
                                <li>
                                                <a
                                                                href="#"
                                                />
                                                Notifications
                                </li>
                                <Link
                                                replace={false}
                                                to="profile"
                                >
                                                Profile
                                </Link>
                                <li>
                                                <a
                                                                href="#"
                                                />
                                                Top Tech Talks
                                </li>
                                <li>
                                                <a
                                                                href="#"
                                                />
                                                New Article
                                </li>
                                <li
                                                onClick={[Function]}
                                >
                                                <a
                                                                href="#"
                                                />
                                                Sign Out
                                </li>
                </ul>
</div>,
            ],
            "className": "collapsible--menu",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "id": "menu",
                "type": "checkbox",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "htmlFor": "menu",
              },
              "ref": null,
              "rendered": null,
              "type": "label",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ul>
                  <li>
                                    <a
                                                      href="#"
                                    />
                                    Notifications
                  </li>
                  <Link
                                    replace={false}
                                    to="profile"
                  >
                                    Profile
                  </Link>
                  <li>
                                    <a
                                                      href="#"
                                    />
                                    Top Tech Talks
                  </li>
                  <li>
                                    <a
                                                      href="#"
                                    />
                                    New Article
                  </li>
                  <li
                                    onClick={[Function]}
                  >
                                    <a
                                                      href="#"
                                    />
                                    Sign Out
                  </li>
</ul>,
                "className": "menu-content",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <li>
                      <a
                                            href="#"
                      />
                      Notifications
</li>,
                    <Link
                      replace={false}
                      to="profile"
>
                      Profile
</Link>,
                    <li>
                      <a
                                            href="#"
                      />
                      Top Tech Talks
</li>,
                    <li>
                      <a
                                            href="#"
                      />
                      New Article
</li>,
                    <li
                      onClick={[Function]}
>
                      <a
                                            href="#"
                      />
                      Sign Out
</li>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <a
                          href="#"
/>,
                        "Notifications",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "href": "#",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "a",
                      },
                      "Notifications",
                    ],
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Profile",
                      "replace": false,
                      "to": "profile",
                    },
                    "ref": null,
                    "rendered": "Profile",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <a
                          href="#"
/>,
                        "Top Tech Talks",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "href": "#",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "a",
                      },
                      "Top Tech Talks",
                    ],
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <a
                          href="#"
/>,
                        "New Article",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "href": "#",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "a",
                      },
                      "New Article",
                    ],
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <a
                          href="#"
/>,
                        "Sign Out",
                      ],
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "href": "#",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "a",
                      },
                      "Sign Out",
                    ],
                    "type": "li",
                  },
                ],
                "type": "ul",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "disableLifecycleMethods": true,
    "hydrateIn": undefined,
  },
}
`;

exports[`<Header /> should render without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="app--title"
>
          New Idea
</h1>,
        <div
          className="sign--up-container"
/>,
        <div
          className="collapsible--menu"
>
          <input
                    id="menu"
                    type="checkbox"
          />
          <label
                    htmlFor="menu"
          />
          <div
                    className="menu-content"
          >
                    <ul>
                              <li>
                                        <a
                                                  href="#"
                                        />
                                        Notifications
                              </li>
                              <Link
                                        replace={false}
                                        to="profile"
                              >
                                        Profile
                              </Link>
                              <li>
                                        <a
                                                  href="#"
                                        />
                                        Top Tech Talks
                              </li>
                              <li>
                                        <a
                                                  href="#"
                                        />
                                        New Article
                              </li>
                              <li
                                        onClick={[Function]}
                              >
                                        <a
                                                  href="#"
                                        />
                                        Sign Up / Sign In
                              </li>
                    </ul>
          </div>
</div>,
      ],
      "className": "header--container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "New Idea",
          "className": "app--title",
        },
        "ref": null,
        "rendered": "New Idea",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "sign--up-container",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              id="menu"
              type="checkbox"
/>,
            <label
              htmlFor="menu"
/>,
            <div
              className="menu-content"
>
              <ul>
                            <li>
                                          <a
                                                        href="#"
                                          />
                                          Notifications
                            </li>
                            <Link
                                          replace={false}
                                          to="profile"
                            >
                                          Profile
                            </Link>
                            <li>
                                          <a
                                                        href="#"
                                          />
                                          Top Tech Talks
                            </li>
                            <li>
                                          <a
                                                        href="#"
                                          />
                                          New Article
                            </li>
                            <li
                                          onClick={[Function]}
                            >
                                          <a
                                                        href="#"
                                          />
                                          Sign Up / Sign In
                            </li>
              </ul>
</div>,
          ],
          "className": "collapsible--menu",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "id": "menu",
              "type": "checkbox",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "htmlFor": "menu",
            },
            "ref": null,
            "rendered": null,
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ul>
                <li>
                                <a
                                                href="#"
                                />
                                Notifications
                </li>
                <Link
                                replace={false}
                                to="profile"
                >
                                Profile
                </Link>
                <li>
                                <a
                                                href="#"
                                />
                                Top Tech Talks
                </li>
                <li>
                                <a
                                                href="#"
                                />
                                New Article
                </li>
                <li
                                onClick={[Function]}
                >
                                <a
                                                href="#"
                                />
                                Sign Up / Sign In
                </li>
</ul>,
              "className": "menu-content",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li>
                    <a
                                        href="#"
                    />
                    Notifications
</li>,
                  <Link
                    replace={false}
                    to="profile"
>
                    Profile
</Link>,
                  <li>
                    <a
                                        href="#"
                    />
                    Top Tech Talks
</li>,
                  <li>
                    <a
                                        href="#"
                    />
                    New Article
</li>,
                  <li
                    onClick={[Function]}
>
                    <a
                                        href="#"
                    />
                    Sign Up / Sign In
</li>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <a
                        href="#"
/>,
                      "Notifications",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "href": "#",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "a",
                    },
                    "Notifications",
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Profile",
                    "replace": false,
                    "to": "profile",
                  },
                  "ref": null,
                  "rendered": "Profile",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <a
                        href="#"
/>,
                      "Top Tech Talks",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "href": "#",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "a",
                    },
                    "Top Tech Talks",
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <a
                        href="#"
/>,
                      "New Article",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "href": "#",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "a",
                    },
                    "New Article",
                  ],
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <a
                        href="#"
/>,
                      "Sign Up / Sign In",
                    ],
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "href": "#",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "a",
                    },
                    "Sign Up / Sign In",
                  ],
                  "type": "li",
                },
              ],
              "type": "ul",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="app--title"
>
            New Idea
</h1>,
          <div
            className="sign--up-container"
/>,
          <div
            className="collapsible--menu"
>
            <input
                        id="menu"
                        type="checkbox"
            />
            <label
                        htmlFor="menu"
            />
            <div
                        className="menu-content"
            >
                        <ul>
                                    <li>
                                                <a
                                                            href="#"
                                                />
                                                Notifications
                                    </li>
                                    <Link
                                                replace={false}
                                                to="profile"
                                    >
                                                Profile
                                    </Link>
                                    <li>
                                                <a
                                                            href="#"
                                                />
                                                Top Tech Talks
                                    </li>
                                    <li>
                                                <a
                                                            href="#"
                                                />
                                                New Article
                                    </li>
                                    <li
                                                onClick={[Function]}
                                    >
                                                <a
                                                            href="#"
                                                />
                                                Sign Up / Sign In
                                    </li>
                        </ul>
            </div>
</div>,
        ],
        "className": "header--container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "New Idea",
            "className": "app--title",
          },
          "ref": null,
          "rendered": "New Idea",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "sign--up-container",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                id="menu"
                type="checkbox"
/>,
              <label
                htmlFor="menu"
/>,
              <div
                className="menu-content"
>
                <ul>
                                <li>
                                                <a
                                                                href="#"
                                                />
                                                Notifications
                                </li>
                                <Link
                                                replace={false}
                                                to="profile"
                                >
                                                Profile
                                </Link>
                                <li>
                                                <a
                                                                href="#"
                                                />
                                                Top Tech Talks
                                </li>
                                <li>
                                                <a
                                                                href="#"
                                                />
                                                New Article
                                </li>
                                <li
                                                onClick={[Function]}
                                >
                                                <a
                                                                href="#"
                                                />
                                                Sign Up / Sign In
                                </li>
                </ul>
</div>,
            ],
            "className": "collapsible--menu",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "id": "menu",
                "type": "checkbox",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "htmlFor": "menu",
              },
              "ref": null,
              "rendered": null,
              "type": "label",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ul>
                  <li>
                                    <a
                                                      href="#"
                                    />
                                    Notifications
                  </li>
                  <Link
                                    replace={false}
                                    to="profile"
                  >
                                    Profile
                  </Link>
                  <li>
                                    <a
                                                      href="#"
                                    />
                                    Top Tech Talks
                  </li>
                  <li>
                                    <a
                                                      href="#"
                                    />
                                    New Article
                  </li>
                  <li
                                    onClick={[Function]}
                  >
                                    <a
                                                      href="#"
                                    />
                                    Sign Up / Sign In
                  </li>
</ul>,
                "className": "menu-content",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <li>
                      <a
                                            href="#"
                      />
                      Notifications
</li>,
                    <Link
                      replace={false}
                      to="profile"
>
                      Profile
</Link>,
                    <li>
                      <a
                                            href="#"
                      />
                      Top Tech Talks
</li>,
                    <li>
                      <a
                                            href="#"
                      />
                      New Article
</li>,
                    <li
                      onClick={[Function]}
>
                      <a
                                            href="#"
                      />
                      Sign Up / Sign In
</li>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <a
                          href="#"
/>,
                        "Notifications",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "href": "#",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "a",
                      },
                      "Notifications",
                    ],
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Profile",
                      "replace": false,
                      "to": "profile",
                    },
                    "ref": null,
                    "rendered": "Profile",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <a
                          href="#"
/>,
                        "Top Tech Talks",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "href": "#",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "a",
                      },
                      "Top Tech Talks",
                    ],
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <a
                          href="#"
/>,
                        "New Article",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "href": "#",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "a",
                      },
                      "New Article",
                    ],
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <a
                          href="#"
/>,
                        "Sign Up / Sign In",
                      ],
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "href": "#",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "a",
                      },
                      "Sign Up / Sign In",
                    ],
                    "type": "li",
                  },
                ],
                "type": "ul",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "disableLifecycleMethods": true,
    "hydrateIn": undefined,
  },
}
`;
